# web-builder

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  docker-compose.yaml  nginx.conf  package-lock.json  package.json  readme.md  safelist.txt  setup.sql  styles.css  tailwind.config.js  tailwind.css
assets/css/: main.css  styles.css
assets/css/lib/: nprogress.css  tailwind.css  toast.css
assets/js/: main.js
assets/js/app/: navbar.js  searchbox.js  slider.js
assets/js/builder/: data-source.js  data.js  navbar.js
assets/js/lib/: nprogress.js  swipe.js
docker/nginx/: Dockerfile
migrations/: 0001_create-users_up.sql  0002_insert-users_up.sql  0003_create-templates_up.sql  0004_create-templates_up.sql  0004_create-websites_up.sql  0005_insert-templates_down.sql  0005_insert-templates_up.sql  setup.sql
nginx/: Dockerfile  nginx.conf
src/: config.rs  lib.rs  main.rs  postgres.rs  router.rs
src/controllers/: auth.rs  mod.rs
src/controllers/app/: demo.rs
src/controllers/builder/: auth.rs  choose_style.rs  data.rs  edit.rs  home.rs  mod.rs  pages.rs  rso_data.rs  section.rs  website.rs
src/controllers/real_estate/: data.rs  demo.rs  mod.rs  pages.rs  rso_data.rs  section.rs
src/handlers/: auth.rs
src/middlewares/: auth.rs  csrf.rs  mod.rs
src/models/: error.rs  function_params.rs  mod.rs  rso_data.rs  state.rs  template.rs  user.rs  website.rs  website_setting.rs  website_setting_website.rs  website_template.rs
src/utilities/: db.rs  hash.rs  jwt.rs  minify.rs  mod.rs
src/utils/: db.rs
src/views/: auth.rs  icons.rs  mod.rs
src/views/app/: home.rs  mod.rs  real_estate_demo.rs
src/views/app_pages/: home.rs
src/views/builder/: auth.rs  data.rs  edit.rs  header.rs  home.rs  mod.rs  shared.rs  template.rs  website.rs
src/views/builder_pages/: auth.rs  home.rs
src/views/pages/: auth.rs  home.rs
src/views/real_estate/: components.rs  contact.rs  head.rs  header.rs  home.rs  mod.rs  pages.rs  property_details.rs  real_estate_demo.rs  search_components.rs  search_result.rs  shared.rs  shared_components.rs
templates/: login.stpl  main_header.stpl
templates/app/: home.stpl  real_estate_demo.stpl
templates/app_pages/: home.stpl
templates/builder/: home.stpl  login.stpl  register.stpl
templates/builder_headers/: main_header.stpl
templates/builder_pages/: home.stpl  login.stpl  register.stpl
templates/headers/: app_main_header.stpl  builder_main_header.stpl  demo_header.stpl
templates/pages/: home.stpl  login.stpl  register.stpl
