[package]
name = "web-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
axum-extra = { version = "0.9.4", features = ["cookie", "multipart"] }
cookie = "0.18.1"
clap = { version = "4.5.20", features = ["derive", "env"] }
deadpool-postgres = "0.14.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.12"
tokio-postgres-migration = "0.1.0"
tower-http = { version = "0.6.1", features = [
  "fs",
  "set-header",
  "compression-br",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenvy = "0.15.7"
sailfish = "0.9.0"
rust-embed = "8.5.0"
axum-embed = "0.1.0"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.210", features = ["derive"] }
argon2 = "0.5.3"

[profile.release]
debug = false
lto = true
opt-level = "z"
panic = 'abort'
