[package]
name = "web-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.9", features = ["macros"] }
axum-embed = "0.1.0"
axum-extra = { version = "0.9.6", features = ["cookie", "multipart"] }
axum_csrf = { version = "0.10.2", features = ["layer"] }
axum_session = { version = "0.14.0" }
axum_session_redispool = { version = "0.3.0" }
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive", "env"] }
cookie = "0.18.1"
deadpool-postgres = "0.14.0"
dotenvy = "0.15.7"
http-body-util = "0.1.2"
maud = "0.26.0"
postgres-types = { version = "0.2.8", features = ["derive"] }
redis = "0.27.6"
redis_pool = "0.6.0"
reqwest = "0.12.9"
rust-embed = "8.5.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_urlencoded = "0.7.1"
tailwind_fuse = "0.3.1"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.12"
tower-http = { version = "0.6.2", features = [
  "fs",
  "set-header",
  "compression-br",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
debug = false
lto = true
opt-level = "z"
panic = 'abort'
