[package]
name = "web-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["cookie", "multipart"] }
axum_csrf = { version = "0.11.0", features = ["layer"] }
axum_session = { version = "0.15.0" }
axum_session_redispool = { version = "0.4.1" }
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive", "env"] }
cookie = "0.18.1"
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
html-escape = "0.2.13"
http-body-util = "0.1.2"
maud = "0.26.0"
postgres-types = { version = "0.2.8", features = ["derive"] }
redis = { version = "0.27.6" }
redis_pool = "0.6.0"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_urlencoded = "0.7.1"
tailwind_fuse = "0.3.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.12"
tower-http = { version = "0.6.2", features = ["fs", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
debug = false
lto = true
opt-level = "z"
panic = 'abort'
